Fix error spacing

--- a/statics/css/styles.css
+++ b/statics/css/styles.css
@@ -226,7 +226,6 @@ background-repeat: no-repeat !important;}
   #banner3 h1 {
     color:  rgb(228, 76, 101);
     font-weight: 600;
-    margin-top: 4em;
   }
   #banner3 h3 {
     color: #727888;
@@ -250,9 +249,6 @@ background-repeat: no-repeat !important;}
   z-index: 20;
 margin:2.5%;
 margin-top: 0;
-}
-.container-contact-us {
-  margin-top: 9em !important;
 }
 /*Footer*/
 
